--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "bulma": "^0.9.2",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-dart-sass": "^1.0.2"
+    "gulp-dart-sass": "^1.0.2",
+    "gulp-zip": "^5.1.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3"
